# gxfkit

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  Cargo.toml  README.md  README.zh-CN.md
.github/ISSUE_TEMPLATE/: bug_report.yml  bug_report_zh.yml  feature_request.yml  feature_request_zh.yml  parity_divergence.yml  parity_divergence_zh.yml
.github/workflows/: ci.yml  public-install-audit.yml  publish-crates.yml  release.yml
benchmark/: Dockerfile  bench.sh  parity-check.sh  run-gxf2gxf-corpus.sh  run-gxf2gxf.sh  run.sh  summarize.py  write-residuals.sh
benchmark/gxf2gxf-fixtures/: direct_cds.gff3  direct_codon.gff3  direct_exon.gff3  direct_utr.gff3  multi_cds_adjacent.gff3  multi_cds_split.gff3  orphan_cds.gff3  orphan_exon.gff3  pseudogene_direct_cds.gff3  self_parent_exon.gff3  simple_tree.gff3  transposable_element_gene.gff3
corpus/: download.sh
crates/gxfkit/: Cargo.toml  README.md
crates/gxfkit-core/: Cargo.toml  LICENSE  README.md
crates/gxfkit-core/src/: attributes.rs  convert.rs  lib.rs  model.rs  reader.rs  standardize.rs
crates/gxfkit-core/tests/: property.rs
crates/gxfkit/src/: main.rs
crates/gxfkit/tests/: cli.rs
docs/: ANNOUNCEMENT-v0.0.2.md  COMMUNITY.zh-CN.md  DESIGN.md  FAQ.md  FAQ.zh-CN.md  GXF2GXF-PARITY.md  M0-REPORT.md  M3-STANDARDIZATION-PLAN.md  OUTREACH-M3-BETA.md  PARITY.md  RELEASE-STATUS.md  RELEASE.md  ROADMAP.md  SOFT-LAUNCH-M3-BETA.md
docs/releases/: v0.0.2.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: gff3_to_gtf.rs  reader.rs
packaging/bioconda/: README.md  meta.yaml.template
packaging/bioconda/recipe/: meta.yaml
scripts/: check-benchmark-summary.py  check-bioconda-recipe.py  check-crate-metadata.py  check-crates-publish-state.sh  check-install-docs.py  check-maintainer-surfaces.py  check-package-files.sh  check-parity-doc.py  check-public-audit-log.py  check-publish-ref.sh  check-release-artifacts.py  check-release-check-log.py  check-release-check.py  check-release-dist.py  check-release-doc.py  check-release-notes.py  check-release-status-doc.py  check-version-consistency.py  check-workflow-policy.py  github-source-sha256.py  prepare-next-version.py  release-check.sh  release-evidence.sh  release-readiness.py  test-benchmark-summarize.sh  test-benchmark-summary.sh  test-bioconda-install-verifier.sh  test-bioconda-recipe.sh  test-check-crates-publish-state.sh  test-ci-workflow.sh  test-crate-metadata.sh  test-crates-install-verifier.sh  test-executable-scripts.sh  test-github-release-parity.sh  test-github-release-verifier.sh  test-github-source-sha256.sh  test-install-docs.sh  test-local-cargo-install-verifier.sh  test-maintainer-surfaces.sh  test-package-files.sh  (+36 more)
tests/parity/: gff3_residual_summary.py  normalize.py  residual_summary.py
