[workspace]
resolver = "2"
members = ["crates/gxfkit-core", "crates/gxfkit"]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/benngaihk/gxfkit"
authors = ["gxfkit contributors"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
