[workspace]
resolver = "2"
members = ["crates/gxfkit-core", "crates/gxfkit"]
exclude = ["fuzz"]

[workspace.package]
version = "0.0.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/benngaihk/gxfkit"
homepage = "https://github.com/benngaihk/gxfkit"
authors = ["gxfkit contributors"]
keywords = ["bioinformatics", "gff", "gtf", "genomics", "agat"]
categories = ["command-line-utilities", "science"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
